--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "2.1.1",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.1",
+    "react-paginate": "^8.1.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "sass": "1.48.0",
     "web-vitals": "^1.1.2"
   },
