--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
